# actix_login

./: .gitignore  Cargo.toml  LICENSE  README.md  rust.db
migrations/2019-09-25-121942_create_user/: up.sql
migrations/2019-09-25-175102_create_user/: up.sql
src/: auth_handler.rs  errors.rs  lib.rs  login_handler.rs  main.rs  models.rs  register_handler.rs  schema.rs  utils.rs
